<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_tab_home"
        android:icon="@drawable/icon_bottom_tab_home"
        android:title="@string/bottom_tab_home" />

    <item
        android:id="@+id/bottom_tab_project"
        android:icon="@drawable/icon_bottom_tab_project"
        android:title="@string/bottom_tab_project" />

    <item
        android:id="@+id/bottom_tab_system"
        android:icon="@drawable/icon_bottom_tab_system"
        android:title="@string/bottom_tab_system" />

    <item
        android:id="@+id/bottom_tab_todo"
        android:icon="@drawable/icon_bottom_tab_todo"
        android:title="@string/bottom_tab_todo" />

    <item
        android:id="@+id/bottom_tab_my"
        android:icon="@drawable/icon_bottom_tab_my"
        android:title="@string/bottom_tab_my" />

</menu>